# sample_mnist_server

./: .gitignore  aicert.yaml  pyproject.toml
sample_mnist_server/: main.py  serializers.py
